Adicionado código para adicionar cards à vitrine

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <!-- VITRINE -->
         <section class="vitrine">
             <!-- ELEMENTOS ADICIONADOS PELO DOM -->
+            <script src="assets/javascript/card.js"></script>
         </section>
         <!-- FIM VITRINE -->
 
