Alteração de nome no arquivo JS e bug CSS resolvido

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
         <!-- VITRINE -->
         <section class="vitrine">
             <!-- ELEMENTOS ADICIONADOS PELO DOM -->
-            <script src="assets/javascript/card.js"></script>
         </section>
         <!-- FIM VITRINE -->
 
     </main>
     <!-- FIM DO PRINCIPAL -->
+
+    <!-- SCRIPTS  -->
+    <script src="assets/javascript/index.js"></script>
 
 </body>
 </html>
