Criada função de adicionar e remover cards do carrinho

--- a/index.html
+++ b/index.html
@@ -43,14 +43,20 @@
         <!-- FIM DA BARRA DE PESQUISA -->
 
         <!-- CARRINHO DE COMPRAS -->
-        <section class="carrinho-compras">
+        <section class="carrinho">
 
             <!-- HEADER CARRINHO DE COMPRAS-->
-            <h3>Carrinho de compras</h3>
+            <h3 class="carrinho--header">Carrinho de compras</h3>
 
             <!-- LISTA CARRINHO DE COMPRAS -->
-            <div class="carrinho-compras--lista">
+            <ul class="carrinho--lista">
                 <!-- ELEMENTOS ADICIONADOS PELO DOM -->
+            </ul>
+            <div class="carrinho-preço">
+                <p>Quantidade:</p>
+                <p>0</p>
+                <p>Total:</p>
+                <p>R$ 0,00</p>
             </div>
 
         </section>
