Funcionalidade do valor total e quantidade de itens  no carrinho

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             <ul class="carrinho--lista">
                 <!-- ELEMENTOS ADICIONADOS PELO DOM -->
             </ul>
-            <div class="carrinho-preço">
+            <div class="carrinho-total">
                 <p>Quantidade:</p>
-                <p>0</p>
+                <p id="carrinho-quantity">0</p>
                 <p>Total:</p>
-                <p>R$ 0,00</p>
+                <p id="carrinho-price">R$ 0,00</p>
             </div>
 
         </section>
