--- a/index.html
+++ b/index.html
@@ -20,56 +20,54 @@
         <nav class="menu">
             <img class="menu--icon" src="assets/img/menu-icon.png" alt="icone de menu">
             <ul class="menu--lista">
-                <li><a href="#" class="menu--link menu--link-active">Todos</a></li>
-                <li><a href="#" class="menu--link">Acessórios</a></li>
-                <li><a href="#" class="menu--link">Calçados</a></li>
-                <li><a href="#" class="menu--link">Camisetas</a></li>
+                <li><a href="#" class="menu--link menu--link-active" value="Todos">Todos</a></li>
+                <li><a href="#" class="menu--link" value="Acessórios">Acessórios</a></li>
+                <li><a href="#" class="menu--link" value="Calçados">Calçados</a></li>
+                <li><a href="#" class="menu--link" value="Camisetas">Camisetas</a></li>
             </ul>
         </nav>
-
     </header>
-    <!-- FIM DO CABEÇALHO -->
 
     <!-- PRINCIPAL -->
     <main>
 
-        <!-- BARRA DE PESQUISA -->
-        <section class="barra-pesquisa">
-            <form action="">
-                <input type="text" placeholder="Digite aqui sua pesquisa" class="barra-pesquisa--input">
-                <input type="submit" value="Pesquisar" class="barra-pesquisa--button">
-            </form>
-        </section>
-        <!-- FIM DA BARRA DE PESQUISA -->
+        <aside id="coluna-lateral">
+            <!-- BARRA DE PESQUISA -->
+            <section class="barra-pesquisa">
+                <form>
+                    <input type="text" placeholder="Digite aqui sua pesquisa" class="barra-pesquisa--input">
+                    <input type="submit" value="Pesquisar" class="barra-pesquisa--button">
+                </form>
+            </section>
 
-        <!-- CARRINHO DE COMPRAS -->
-        <section class="carrinho">
+            <!-- CARRINHO DE COMPRAS -->
+            <section class="carrinho">
 
-            <!-- HEADER CARRINHO DE COMPRAS-->
-            <h3 class="carrinho--header">Carrinho de compras</h3>
+                <!-- HEADER CARRINHO DE COMPRAS-->
+                <h3 class="carrinho--header">Carrinho de compras</h3>
 
-            <!-- LISTA CARRINHO DE COMPRAS -->
-            <ul class="carrinho--lista">
-                <!-- ELEMENTOS ADICIONADOS PELO DOM -->
-            </ul>
-            <div class="carrinho-total">
-                <p>Quantidade:</p>
-                <p id="carrinho-quantity">0</p>
-                <p>Total:</p>
-                <p id="carrinho-price">R$ 0,00</p>
-            </div>
+                <!-- LISTA CARRINHO DE COMPRAS -->
+                <ul class="carrinho--lista">
+                    <!-- ELEMENTOS ADICIONADOS PELO DOM -->
+                </ul>
 
-        </section>
-        <!-- FIM DO CARRINHO DE COMPRAS -->
+                <!-- TOTAL DO CARRINHO DE COMPRAS -->
+                <div class="carrinho-total">
+                    <p>Quantidade:</p>
+                    <p id="carrinho-quantity">0</p>
+                    <p>Total:</p>
+                    <p id="carrinho-price">R$ 0,00</p>
+                </div>
+
+            </section>
+        </aside>
 
         <!-- VITRINE -->
         <section class="vitrine">
             <!-- ELEMENTOS ADICIONADOS PELO DOM -->
         </section>
-        <!-- FIM VITRINE -->
 
     </main>
-    <!-- FIM DO PRINCIPAL -->
 
     <!-- SCRIPTS  -->
     <script src="assets/javascript/index.js"></script>
