--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
             <!-- BARRA DE PESQUISA -->
             <section id="search-bar">
                 <form>
-                    <input type="text" placeholder="Digite aqui sua pesquisa" class="search-bar-input">
-                    <input type="submit" value="Pesquisar" class="search-bar-button">
+            <input
+              type="text"
+              placeholder="Digite aqui sua pesquisa"
+              class="search-bar-input"
+            />
+            <button type="button" class="search-bar-button">Pesquisar</button>
                 </form>
             </section>
 
